--- a/Projetos/1 - Projeto Tributo - Akira/Index.html
+++ b/Projetos/1 - Projeto Tributo - Akira/Index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Tributo: Akira Toriyama</title>
-    <link rel="shortcut icon" href="Img/esfera.ico">
-    <link rel="stylesheet" href="CSS/Styles.css">
-</head>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Projeto Tributo: Akira Toriyama</title>
+        <link rel="shortcut icon" href="Img/esfera.ico">
+        <link rel="stylesheet" href="CSS/Styles.css">
+    </head>
 
-<body>
-    <h1>Teste</h1>
-</body>
+    <body>
+        <div class="container">
+
+            <!-- Cabeçalho -->
+            <div class="header">
+                <h1 class="main-title"> Akira Toriyama</h1>
+                <p class="main-paragraph">Um famoso e respeitado mangaká</p>
+            </div>
+            
+            <!-- Imagem em destaque -->
+            <div class="featured-image">
+                <figure>
+                    <img src="Img/img1.jpg" alt="O Akira">
+                    <figcaption>Uma das poucas e mais famosas fotos tiradas de Akira</figcaption>
+                </figure>
+            </div>
+
+            <!-- Biografia -->
+            <div class="biography-container">
+                <h2>Um pouco sobre Akira</h2>
+                <p>
+                    <span class="bold">Akira Toriyama (鳥山 明)</span> foi um autor japonês de mangá, conhecido por ser o criador de séries como Dragon Ball e Dr. Slump. 
+                    Toriyama é considerado um dos autores que mudou a história dos mangás ao lado de Osamu Tezuka e Rumiko Takahashi, 
+                    pois suas obras são altamente influentes e populares, principalmente Dragon Ball, que muitos artistas de mangá citam 
+                    como fonte de inspiração.
+                </p>
+            </div>
+
+            <!-- Container de citação -->
+
+            <!-- Mais informações -->
+        </div>
+    </body>
 </html>
