--- a/Projetos/1 - Projeto Tributo - Akira/Index.html
+++ b/Projetos/1 - Projeto Tributo - Akira/Index.html
@@ -34,6 +34,13 @@
                     pois suas obras são altamente influentes e populares, principalmente Dragon Ball, que muitos artistas de mangá citam 
                     como fonte de inspiração.
                 </p>
+                <p>
+                    Akira é conhecido por criar algumas das obras mais icônicas do gênero shonen, como <span class="bold">Dr. Slump e Dragon Ball.</span> 
+                    Sua arte simples e design de personagens marcantes o destacaram na indústria, influenciando uma geração de mangakás e deixando um legado duradouro 
+                    na cultura pop japonesa e mundial. Além de suas obras mais conhecidas, Toriyama também trabalhou em projetos de design de personagens para jogos de 
+                    vídeo game e continuou a produzir histórias curtas de mangá após o término de "Dragon Ball". Seu impacto é evidente não apenas em suas próprias criações,
+                    mas também no reconhecimento de outros artistas e na perenidade de suas obras.
+                </p>
             </div>
 
             <!-- Container de citação -->
